--- a/src/app/pages/layout/layout.page.html
+++ b/src/app/pages/layout/layout.page.html
@@ -8,7 +8,6 @@
             </div>
         </cwc-overlay> -->
     </cwc-header>
-  
 
     <cwc-sidenav slot="sidenav" variant="positive">
         <!-- <cwc-entity-selector slot="legal-entity-selection" variant="positive">
@@ -17,13 +16,16 @@
             </cwc-entity-selector-item>
             <cwc-entity-selector-item entity-name="Grand Valley Construction" entity-id="#1323555"></cwc-entity-selector-item>
         </cwc-entity-selector> -->
-    
+
         <cwc-sidenav-menu id="menuNav" slot="menu-items" variant="positive">
-            <div class="content-avatar-menu" style="margin-left: 0.5; margin-right: 0.5rem; display: flex; align-items: center;" [routerLink]="['/app/profile']" routerLinkActive="router-link-active" >
-                <cwc-avatar size="small" variant="negative" [name]="user.name" class="m-h-xs" style="width: 15%; padding: 1rem"></cwc-avatar>
-                 <p style="margin-left: 0.5rem;">{{ user.name }}</p>
+            <div class="content-avatar-menu"
+                style="margin-left: 0.5; margin-right: 0.5rem; display: flex; align-items: center;"
+                [routerLink]="['/app/profile']" routerLinkActive="router-link-active">
+                <cwc-avatar size="small" variant="negative" [name]="user.name" class="m-h-xs"
+                    style="width: 15%; padding: 1rem"></cwc-avatar>
+                <p style="margin-left: 0.5rem;">{{ user.name }}</p>
             </div>
-            
+
             <!-- <div>
                 <ul *ngFor="let menudDriver of menu">
                     <li>
@@ -37,22 +39,33 @@
             <!-- <div *ngFor="let menudDriver of menu">
                 <cwc-sidenav-menu-item *ngIf="menudDriver.show"  [label]="menudDriver.title" [routerLink]="menudDriver.url" routerLinkActive="router-link-active" ></cwc-sidenav-menu-item>
             </div> -->
-        <cwc-sidenav-menu-item  label="Inicio" [iconName]="'radio-static'" [routerLink]="['/app/home']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item  label="Mis viajes" [iconName]="'radio-static'" [routerLink]="['/app/my-travels']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item  label="Buscar viaje" [iconName]="'radio-static'" [routerLink]="['/app/travels']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item  label="Notificaciones" [iconName]="'radio-static'" [routerLink]="['/app/notifications']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item  label="Lista de espera" [iconName]="'radio-static'" [routerLink]="['/app/waiting-list']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item *ngIf="notDriver"  label="Vehículos" [iconName]="'radio-static'" [routerLink]="['/app/vehiculos']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item *ngIf="notDriver" label="Conductores" [iconName]="'radio-static'" [routerLink]="['/app/conductores']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
-        <cwc-sidenav-menu-item  label="Llamar a centro de servicio" [iconName]="'radio-static'" [routerLink]="['/app/call-service']" routerLinkActive="router-link-active"  ></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item label="Inicio" [iconName]="'radio-static'" [routerLink]="['/app/home']"
+                routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item label="Mis viajes" [iconName]="'radio-static'" [routerLink]="['/app/my-travels']"
+                routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item label="Buscar viaje" [iconName]="'radio-static'" [routerLink]="['/app/travels']"
+                routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item label="Notificaciones" [iconName]="'radio-static'"
+                [routerLink]="['/app/notifications']" routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item label="Lista de espera" [iconName]="'radio-static'"
+                [routerLink]="['/app/waiting-list']" routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item *ngIf="notDriver" label="Vehículos" [iconName]="'radio-static'"
+                [routerLink]="['/app/vehiculos']" routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item *ngIf="notDriver" label="Conductores" [iconName]="'radio-static'"
+                [routerLink]="['/app/conductores']" routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
+            <cwc-sidenav-menu-item label="Llamar a centro de servicio" [iconName]="'radio-static'"
+                [routerLink]="['/app/call-service']" routerLinkActive="router-link-active"></cwc-sidenav-menu-item>
 
         </cwc-sidenav-menu>
+
         <cwc-footer-menu slot="links">
-            <cwc-footer-menu-item label="Legal" href="https://www.cemex.com/legal" target="_blank"></cwc-footer-menu-item>
-            <cwc-footer-menu-item label="Privacy" onclick="window.alert('Triggered by a javascript function')"></cwc-footer-menu-item>
+            <cwc-footer-menu-item label="Legal" href="https://www.cemex.com/legal" target="_blank">
+            </cwc-footer-menu-item>
+            <cwc-footer-menu-item label="Privacy" onclick="window.alert('Triggered by a javascript function')">
+            </cwc-footer-menu-item>
             <cwc-footer-menu-item label="cemex.com" href="https://www.cemex.com" target="_blank"></cwc-footer-menu-item>
         </cwc-footer-menu>
-    
+
         <div slot="copyright">
             <div class="button" (click)="logout()">
                 <cwc-button variant="link">Cerrar Sesión</cwc-button>
@@ -63,11 +76,11 @@
             All rights reserved.
         </div>
     </cwc-sidenav>
-  
-  
+
+
     <div slot="main" style="padding: 15px; flex: 1 1 auto">
         <!-- <h1 style="margin-top: 0">Page Demo</h1>
         <ion-router-outlet style="flex: 1 1 auto;"></ion-router-outlet> -->
         <ng-content></ng-content>
-      </div>
-  </cwc-page>
+    </div>
+</cwc-page>
