--- a/src/app/pages/my-travels/details-trip-scheduled/details-trip-scheduled.page.html
+++ b/src/app/pages/my-travels/details-trip-scheduled/details-trip-scheduled.page.html
@@ -10,7 +10,7 @@
       <div *ngIf="rol !== 'Conductor'" class="header-card">
         <div class="avatar-info">
           <div class="attr-name">CONDUCTOR</div>
-          <span class="style-name">Icono Telefono {{travel.userName}}</span>
+          <cwc-button variant="link" leading-icon="download">{{travel.userName}}</cwc-button>
         </div>
         <cwc-cell class="flex flex__align--bullseye" style="text-align: end;">
           <cwc-button variant="link">
