--- a/src/app/pages/drivers/new-driver/new-driver.page.html
+++ b/src/app/pages/drivers/new-driver/new-driver.page.html
@@ -89,13 +89,13 @@
         <cwc-cell class="border" colspan="6" mobile-colspan="6" style="cursor: pointer;">
           <div class="item-archives">
             <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
-            <h5 class="text-archive">Tomar fotografía</h5>
+            <div class="text-archive">Tomar fotografía</div>
           </div>
         </cwc-cell>
         <cwc-cell colspan="6" mobile-colspan="6" style="cursor: pointer;">
           <div class="item-archives">
             <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
-            <h5 class="text-archive">Seleccionar archivo</h5>
+            <div class="text-archive">Seleccionar archivo</div>
           </div>
         </cwc-cell>
     </cwc-grid>
@@ -108,13 +108,13 @@
         <cwc-cell class="border" colspan="6" mobile-colspan="6" style="cursor: pointer;">
           <div class="item-archives">
             <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
-            <h5 class="text-archive">Tomar fotografía</h5>
+            <div class="text-archive">Tomar fotografía</div>
           </div>
         </cwc-cell>
         <cwc-cell colspan="6" mobile-colspan="6" style="cursor: pointer;">
           <div class="item-archives">
             <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
-            <h5 class="text-archive">Seleccionar archivo</h5>
+            <div class="text-archive">Seleccionar archivo</div>
           </div>
         </cwc-cell>
     </cwc-grid>
@@ -126,13 +126,13 @@
         <cwc-cell class="border" colspan="6" mobile-colspan="6" style="cursor: pointer;">
           <div class="item-archives">
             <cwc-icon name="camera" size="28px" color="bright-blue"></cwc-icon>
-            <h5 class="text-archive">Tomar fotografía</h5>
+            <div class="text-archive">Tomar fotografía</div>
           </div>
         </cwc-cell>
         <cwc-cell colspan="6" mobile-colspan="6" style="cursor: pointer;">
           <div class="item-archives">
             <cwc-icon name="document" size="28px" color="bright-blue"></cwc-icon>
-            <h5 class="text-archive">Seleccionar archivo</h5>
+            <div class="text-archive">Seleccionar archivo</div>
           </div>
         </cwc-cell>
     </cwc-grid>
