--- a/src/app/pages/travels/travels.page.scss
+++ b/src/app/pages/travels/travels.page.scss
@@ -1,15 +1,19 @@
 .content-card{
-    padding-top: 0.5rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem; 
+    padding-top: 5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem; 
     padding-bottom: 1rem;
-    flex: 1 1 auto;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     overflow: auto;
- }
+}
 
 .content-title{
     padding-top: 1rem;
-    font-weight: 700;
+    font-weight: 200;
 }
 
 .content-grid-register{
