--- a/src/app/pages/waiting-list/waiting-list.page.scss
+++ b/src/app/pages/waiting-list/waiting-list.page.scss
@@ -1,6 +1,14 @@
 .navbar {
-    width: 100%;
-    height: 100%;
+    margin-top: 6.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: auto;
 }
 
 .icon{
